<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE9E7">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="900dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="30dp">

    <TextView
        android:id="@+id/textViewAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/name"
        android:textColor="#222523"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/beautytips1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/create_new_account"
        android:textColor="#222523"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/edittxt_round_corner"
        android:fontFamily="@font/candara_light"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/textViewAddress23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/UserName"
        android:textSize="18dp"
        android:textColor="#222523"  />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:background="@drawable/edittxt_round_corner"
        android:fontFamily="@font/candara_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <TextView
        android:id="@+id/textViewAddress24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/email"
        android:textSize="18dp"
        android:textColor="#222523"  />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:background="@drawable/edittxt_round_corner"
        android:fontFamily="@font/candara_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002" />


    <TextView
        android:id="@+id/textViewAddress28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/phone_number"
        android:textSize="18dp"
        android:textColor="#222523" />


    <EditText
        android:id="@+id/edittext_phonenumber"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:background="@drawable/edittxt_round_corner"
        android:fontFamily="@font/candara_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/textViewAddress26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/password3"
        android:textSize="18dp"
        android:textColor="#222523"  />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:background="@drawable/edittxt_round_corner"
        android:fontFamily="@font/candara_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/textViewAddress27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/confirm_password"
        android:textSize="18dp"
        android:textColor="#222523"  />

    <EditText
        android:id="@+id/edittext_confirmpassword"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/edittxt_round_corner"
        android:fontFamily="@font/candara_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="520dp" />


    <Button
        android:id="@+id/button_choose_image"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="680dp"
        android:background="@drawable/btn_round_corner"
        android:fontFamily="@font/candara"
        android:text="@string/choose_image"
        android:textSize="20dp"
        android:textColor="#222523" />



    <Button
        android:id="@+id/button_register"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="780dp"
        android:background="@drawable/btn_round_corner"
        android:fontFamily="@font/candara"
        android:text="@string/register"
        android:textSize="20dp"
        android:textColor="#222523" />

    <TextView

        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="750dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/already_registered"
        android:textColor="#222523"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />

    <TextView
        android:id="@+id/textview_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="750dp"
        android:fontFamily="@font/candara_light"
        android:paddingLeft="20dp"
        android:text="@string/login1"
        android:textColor="#222523"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />



</RelativeLayout>
    </ScrollView>
