<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="670dp"
    android:background="#FFE9E7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        tools:context=".LoginRegisterDb$Home">


        <TextView
            android:id="@+id/beautytips1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/candara_light"
            android:text="@string/beauty_tips"
            android:textColor="#ff7558"
            android:textSize="28dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />



        <TextView
            android:id="@+id/Btips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/candara_light"
            android:text="@string/beauty_tips1"
            android:textColor="#222523"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/Btips1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="140dp"
            android:fontFamily="@font/candara_light"
            android:text="@string/beauty_tips2"
            android:textColor="#222523"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/Btips2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/candara_light"
            android:text="@string/beauty_tips3"
            android:textColor="#222523"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/Btips3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/candara_light"
            android:text="@string/beauty_tips4"
            android:textColor="#222523"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/Btips4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="260dp"
            android:fontFamily="@font/candara_light"
            android:text="@string/beauty_tips5"
            android:textColor="#222523"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/Btips5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/candara_light"
            android:text="@string/beauty_tips6"
            android:textColor="#222523"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/Btips6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="340dp"
            android:fontFamily="@font/candara_light"
            android:text="@string/beauty_tips7"
            android:textColor="#222523"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/vvv" />




    </RelativeLayout>
</ScrollView>