<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE9E7">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="550dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp">




    <TextView
        android:id="@+id/beautytips1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/update_account"
        android:textColor="#222523"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/textViewTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/id"
        android:textSize="16dp"
        android:textColor="#222523" />

    <EditText
        android:id="@+id/edittext_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:background="@drawable/edittxt_round_corner"
        android:ems="10"
        android:fontFamily="@font/candara_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/textViewTe2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/name"
        android:textSize="16dp"
        android:textColor="#222523"  />


    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:background="@drawable/edittxt_round_corner"
        android:ems="10"
        android:fontFamily="@font/candara_light"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/textViewTe3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/username"
        android:textSize="16dp"
        android:textColor="#222523" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:background="@drawable/edittxt_round_corner"
        android:ems="10"
        android:fontFamily="@font/candara_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />

    <TextView
        android:id="@+id/textViewTe4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/email"
        android:textSize="16dp"
        android:textColor="#222523" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp"
        android:background="@drawable/edittxt_round_corner"
        android:ems="10"
        android:fontFamily="@font/candara_light"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <TextView
        android:id="@+id/textViewTe6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:fontFamily="@font/candara_light"
        android:text="@string/phone_number"
        android:textSize="16dp"
        android:textColor="#222523"  />

    <EditText
        android:id="@+id/edittext_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="560dp"
        android:background="@drawable/edittxt_round_corner"
        android:ems="10"
        android:fontFamily="@font/candara_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <ImageView
        android:id="@+id/imageView55"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp" />


    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="620dp"
        android:background="@drawable/btn_round_corner"
        android:ems="10"
        android:fontFamily="@font/candara"
        android:text="@string/update_account"
        android:textColor="#222523"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />


</RelativeLayout>
</ScrollView>

